# GameDevCourse

./: .CMakePresets.json.swp  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini
.github/workflows/: cmake.yml
01-1-hello-world/: CMakeLists.txt  main  main.cpp
01-2-hello-world-lib/: CMakeLists.txt
01-2-hello-world-lib/lib/: CMakeLists.txt
01-2-hello-world-lib/lib/include/: hello_world.h  hello_world_async.h
01-2-hello-world-lib/lib/src/: hello_world.cpp  hello_world_async.cpp
02-1-sdl-version/: CMakeLists.txt  main.cpp
03-1-sdl-hot-reload/: CMakeLists.txt  game.cpp
03-1-sdl-hot-reload/dll_injection/: CMakeLists.txt  dll_injection.cpp  dll_injection.h
03-1-sdl-hot-reload/engine/: CMakeLists.txt  core.h  engine.cpp  engine.h
04-1-render-basic/: 3d_render_main.cpp  CMakeLists.txt  canvas_basic_main.cpp  line_render_main.cpp  triangle_indexed_render_main.cpp  triangle_interpolated_render_main.cpp
04-1-render-basic/canvas/: CMakeLists.txt  canvas_basic.cpp  canvas_basic.h
04-1-render-basic/core/: matrix.cpp  matrix.h  triangulation.cpp  vector3d.cpp  vector3d.h  view_convertation.h
04-1-render-basic/irender/: CMakeLists.txt  irender.cpp  irender.h
04-1-render-basic/line_render/: line_render.cpp  line_render.h
04-1-render-basic/triangle_indexed_render/: triangle_indexed_render.cpp  triangle_indexed_render.h
04-1-render-basic/triangle_interpolated_render/: triangle_interpolated_render.cpp  triangle_interpolated_render.h
04-2-render-opengl/: CMakeLists.txt  game.cpp  game.h  main.cpp  sphere_engine.cpp  sphere_engine.h
04-2-render-opengl/core/: config.h  event.h
04-2-render-opengl/engine/: CMakeLists.txt  engine.h
04-2-render-opengl/glad/: glad.h
04-2-render-opengl/objects/: camera.cpp  camera.h  culinder.cpp  culinder.h  object.cpp  object.h  sphere.cpp  sphere.h
04-2-render-opengl/shaders/: shader.frag  shader.vert
04-3-render-morphing/: CMakeLists.txt  game.cpp  game.h  main.cpp  morphing_engine.cpp  morphing_engine.h
04-3-render-morphing/core/: config.h
04-3-render-morphing/engine/: engine.h
04-3-render-morphing/objects/: camera.cpp  camera.h  culinder.cpp  culinder.h  morphing.h  object.cpp  object.h  sphere.cpp  sphere.h  sphere_culinder.cpp  sphere_culinder.h
04-3-render-morphing/shaders/: morphing_shader.frag  morphing_shader.vert
05-1-texture/: CMakeLists.txt  engine_impl.cpp  engine_impl.h  game.cpp  m1a1a.mtl  main.cpp
05-1-texture/engine/: engine.h
05-1-texture/objects/: object.h
99-game/: CMakeLists.txt  game.cpp  game.h  main.cpp
99-game-port/: CMakeLists.txt
99-game-port/99-game/: CMakeLists.txt  game.cpp  main.cpp
99-game-port/99-game/core/: event.h  physics.h  types.cpp
99-game-port/99-game/engine/: engine_opengl.cpp  index_buffer.h  shader.h  shader_opengl.cpp  shader_opengl.h  texture.h  texture_opengl.h
99-game-port/99-game/objects/: camera.h  figure.cpp  figure.h  model.h  object.cpp  primitive.cpp
99-game-port/99-game/res/shaders/: imgui_shader.frag  imgui_shader.vert  shader.vert
99-game-port/android-project/: local.properties
99-game-port/android-project/app/: build.gradle
99-game-port/android-project/app/src/main/: AndroidManifest.xml
99-game-port/android-project/app/src/main/assets/res/shaders/: shader.frag
99-game/core/: config.h  physics.cpp  physics.h  picopng.hxx  types.cpp  types.h
99-game/engine/: CMakeLists.txt  audio_buffer.cpp  audio_buffer.h  engine.cpp  engine.h  engine_opengl.cpp  engine_opengl.h  index_buffer.cpp  index_buffer.h  shader_opengl.cpp  shader_opengl.h  texture_opengl.cpp  texture_opengl.h  vertex_buffer.cpp  vertex_buffer.h
99-game/glad/: glad.c
99-game/imgui/: imconfig.h  imgui.h
99-game/objects/: camera.cpp  camera.h  checker.cpp  checker.h  chessboard.cpp  chessboard.h  chessboard_cells.cpp  chessboard_cells.h  figure.cpp  figure.h  mesh.cpp  mesh.h  model.cpp  model.h  object.cpp  object.h  primitive.h
99-game/shaders/: chessboard.frag  chessboard_cells.frag  imgui_shader.frag  imgui_shader.vert  shader.frag  shader.vert  shader_test.frag
99-game/textures/: cube.blend  cube.mtl  primitive_1.blend  primitive_1.mtl  primitive_2.blend  primitive_2.mtl  primitive_3.blend  primitive_3.mtl  primitive_4.blend  primitive_4.mtl
modules/: CMakeLists.txt
